[project]
name = "py_mock"
version = "0.0.1"
authors = [
    { name = "Reggie Gilliard Jr."}
]
description = "Python package for mocking tabular data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pandas", "openpyxl",
]

[project.optional-dependencies]
development = ["sphinx", "pytest", "mypy", "tox", "pandas-stubs"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/HHS/ACF-pir-data"

[project.scripts]
pymock = "py_mock.cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
requires = ["tox>=4.27"]
env_list = ["type", "tests"]

[tool.tox.env.type]
description = "Run type checks"
deps = ["mypy", "pandas-stubs"]
commands = [["mypy", "src/py_mock"]]

[tool.tox.env.tests]
description = "Run tests"
deps = ["pytest"]
commands = [["pytest", "tests"]]